week6/juwonlee/board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-deployment
  namespace: ingress-nginx
  labels:
    app: board-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: board-deployment
  template:
    metadata:
      labels:
        app: board-deployment
    spec:
      containers:
      - name: board-container
        image: gjwnghks99/board:1.0.3
        ports:
        - containerPort: 8080
