week6/juwonlee/board-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: board-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
